--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "docx": "^7.7.0",
+    "file-saver": "^2.0.5",
     "mic-recorder-to-mp3": "^2.2.2",
     "next": "12.3.0",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
