--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@heroicons/react": "^2.0.16",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.12",
+    "axios": "^1.3.4",
     "clsx": "^1.2.1",
+    "docx": "^8.0.0",
+    "file-saver": "^2.0.5",
     "focus-visible": "^5.2.0",
     "next": "13.0.2",
     "postcss-focus-visible": "^6.0.4",
