--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "docx": "^8.0.0",
     "file-saver": "^2.0.5",
     "focus-visible": "^5.2.0",
+    "multer": "^1.4.5-lts.1",
     "next": "13.0.2",
+    "next-connect": "^0.13.0",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
