--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.2.1"
+    "react-tailwindcss-datepicker": "^1.5.1",
+    "tailwindcss": "^3.2.1",
+    "use-immer": "^0.8.1"
   },
   "devDependencies": {
     "eslint": "8.26.0",
